# mindmap

./: .gitignore  Cargo.toml
migrations/2019-07-04-155340_first_migration/: down.sql  up.sql
specs/: classes.puml
src/: main.rs
src/models/: color.rs  comment.rs  edge.rs  history.rs  mind_map.rs  mod.rs  node.rs  permission.rs  user.rs
src/utils/: genmap.rs  mod.rs
