[package]
name = "mindmap"
version = "0.1.0"
authors = ["Julianne Natalie Stingray <flat.bartender@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
diesel = { version = "1.3", features = ["postgres"] }
dotenv = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

