[package]
name = "mindmap"
version = "0.1.0"
authors = ["Julianne Natalie Stingray <flat.bartender@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slotmap = "0.4"
